# nxp-utils

./: .gitignore  .prettierrc  .style.yapf  .yamllint  README.md  pyproject.toml
config/: board_config.dtsi  board_config.yaml
nxp_utils/: assistant.py  logger.py
nxp_utils/dts/: __init__.py  builder.py  loader.py  mex_config.py  signal_config.py  utils.py
nxp_utils/dts/builders/: __init__.py  generate_board_dtsi.py  generate_gpio_logic_nodes.py  generate_node_i2s.py  generate_node_uart.py  generate_pinctrl_entry.py  parse_peripheral_groups.py  pin_entry.py  pinctrl_builder.py
nxp_utils/dts/parsers/: __init__.py  functional_properties_parser.py  peripheral_types_parser.py  peripherals_parser.py  signal_to_pin_map_parser.py
